Added dynamic steps, circle function/button, ...
Added in dynamic stepping depending on line, circle button to create a perfect circle automatically, single step when pen up, scp using a bash file